# ai-news-curator

./: .gitignore  Cargo.toml  LICENSE  README.md  seen_items.db
.github/workflows/: daily_digest.yml
data/raw/2026/01/04/: arxiv_payload.json  hn_payload.json
data/raw/2026/01/05/: arxiv_payload.json  hn_payload.json
data/raw/2026/01/06/: arxiv_payload.json  hn_payload.json
data/raw/2026/01/07/: arxiv_payload.json  hn_payload.json
data/raw/2026/01/08/: arxiv_payload.json  hn_payload.json
data/raw/2026/01/09/: arxiv_payload.json  hn_payload.json
reports/: AI_Digest_2026-01-04.md  AI_Digest_2026-01-05.md  AI_Digest_2026-01-06.md  AI_Digest_2026-01-07.md  AI_Digest_2026-01-08.md  AI_Digest_2026-01-09.md  AI_Digest_2026-01-11.md  AI_Digest_2026-01-12.md  AI_Digest_2026-01-13.md  AI_Digest_2026-01-14.md  AI_Digest_2026-01-15.md  AI_Digest_2026-01-16.md  AI_Digest_2026-01-17.md  AI_Digest_2026-01-18.md  AI_Digest_2026-01-19.md  AI_Digest_2026-01-20.md  AI_Digest_2026-01-21.md  AI_Digest_2026-01-22.md  AI_Digest_2026-01-23.md  AI_Digest_2026-01-24.md  AI_Digest_2026-01-25.md  AI_Digest_2026-01-26.md  AI_Digest_2026-01-27.md  AI_Digest_2026-01-28.md  AI_Digest_2026-01-29.md  AI_Digest_2026-01-30.md  AI_Digest_2026-01-31.md  AI_Digest_2026-02-01.md  AI_Digest_2026-02-02.md  AI_Digest_2026-02-03.md  AI_Digest_2026-02-04.md  AI_Digest_2026-02-05.md  AI_Digest_2026-02-06.md  AI_Digest_2026-02-07.md  AI_Digest_2026-02-09.md  AI_Digest_2026-02-10.md  AI_Digest_2026-02-11.md  AI_Digest_2026-02-12.md  AI_Digest_2026-02-13.md  AI_Digest_2026-02-14.md  (+10 more)
src/: main.rs
(+75 files in other folders)
