[package]
name = "ai-news-curator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29"
feed-rs = "1.3"
md5 = "0.7"
chrono = "0.4"
futures = "0.3"
dotenv = "0.15"
pulldown-cmark = "0.9"
indicatif = "0.18.3"
colored = "3.0.0"
